Added Search Server Code for Brave Search API